[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Firebase/Regester.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Montserrat/Montserrat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://icons/back/outline_arrow_back_black_24dp.png" type="Texture" id=3]
[ext_resource path="res://icons/cog/outline_settings_black_24dp.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Fonts/ARIALN.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://icons/back/outline_arrow_back_black_pressed_24dp.png" type="Texture" id=7]
[ext_resource path="res://icons/cog/outline_settings_black_pressed_24dp.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0.631373, 0.415686, 0.909804, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 27
outline_color = Color( 0.054902, 0.027451, 0.027451, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.980469, 0.980469, 0.980469, 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Fonts/ARIALN.TTF"

[sub_resource type="DynamicFont" id=5]
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.47451, 0.278431, 0.521569, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.631373, 0.415686, 0.909804, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Fonts/ariali.ttf"

[sub_resource type="DynamicFont" id=10]
font_data = SubResource( 9 )

[node name="Register" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -485.0
margin_bottom = -718.56
rect_min_size = Vector2( 480, 720 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 480, 720 )
color = Color( 1, 0.933333, 0.866667, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI"]
margin_left = 139.878
margin_top = 100.787
margin_right = 322.878
margin_bottom = 150.787
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.631373, 0.415686, 0.909804, 1 )
text = "Register"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="UI"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menu"]
margin_left = 20.0
margin_top = 184.0
margin_right = 460.0
margin_bottom = 424.0
custom_constants/separation = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="HBoxContainer" parent="UI/Menu/VBoxContainer"]
margin_right = 440.0
margin_bottom = 46.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="UI/Menu/VBoxContainer/Username"]
margin_top = 4.0
margin_right = 146.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Email          :"

[node name="Email" type="LineEdit" parent="UI/Menu/VBoxContainer/Username"]
margin_left = 146.0
margin_right = 396.0
margin_bottom = 46.0
rect_min_size = Vector2( 250, 46 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
expand_to_text_length = true

[node name="Username2" type="HBoxContainer" parent="UI/Menu/VBoxContainer"]
margin_top = 64.0
margin_right = 440.0
margin_bottom = 110.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="UI/Menu/VBoxContainer/Username2"]
margin_top = 4.0
margin_right = 145.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Username :"

[node name="User_edit" type="LineEdit" parent="UI/Menu/VBoxContainer/Username2"]
margin_left = 145.0
margin_right = 395.0
margin_bottom = 46.0
rect_min_size = Vector2( 250, 46 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
expand_to_text_length = true

[node name="Pass" type="HBoxContainer" parent="UI/Menu/VBoxContainer"]
margin_top = 128.0
margin_right = 440.0
margin_bottom = 174.0
custom_constants/separation = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="UI/Menu/VBoxContainer/Pass"]
margin_top = 4.0
margin_right = 143.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Password  :"

[node name="Pass1" type="LineEdit" parent="UI/Menu/VBoxContainer/Pass"]
margin_left = 143.0
margin_right = 393.0
margin_bottom = 46.0
rect_min_size = Vector2( 250, 46 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
secret = true
expand_to_text_length = true

[node name="Confirm_pass" type="HBoxContainer" parent="UI/Menu/VBoxContainer"]
margin_top = 192.0
margin_right = 440.0
margin_bottom = 238.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="UI/Menu/VBoxContainer/Confirm_pass"]
margin_top = 4.0
margin_right = 144.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Confirm     :"

[node name="Pass2" type="LineEdit" parent="UI/Menu/VBoxContainer/Confirm_pass"]
margin_left = 144.0
margin_right = 394.0
margin_bottom = 46.0
rect_min_size = Vector2( 250, 46 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
secret = true
expand_to_text_length = true

[node name="VBoxContainerUpper" type="VBoxContainer" parent="UI/Menu"]
margin_left = 137.795
margin_top = 504.25
margin_right = 347.795
margin_bottom = 744.25
rect_min_size = Vector2( 210, 240 )
rect_scale = Vector2( 1, 0.75 )
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="UI/Menu/VBoxContainerUpper"]
margin_top = 70.0
margin_right = 210.0
margin_bottom = 170.0
rect_min_size = Vector2( 210, 100 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Submit"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainerLower" type="HBoxContainer" parent="UI/Menu"]
margin_left = 21.0
margin_top = 25.0
margin_right = 468.0
margin_bottom = 87.0
rect_min_size = Vector2( 89, 56 )
custom_constants/separation = 269
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="TextureButton" parent="UI/Menu/HBoxContainerLower"]
margin_right = 89.0
margin_bottom = 62.0
rect_min_size = Vector2( 89, 56 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Settings" type="TextureButton" parent="UI/Menu/HBoxContainerLower"]
margin_left = 358.0
margin_right = 447.0
margin_bottom = 62.0
rect_min_size = Vector2( 89, 56 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Error_msg" type="Label" parent="UI/Menu"]
margin_left = 30.5858
margin_top = 421.068
margin_right = 462.586
margin_bottom = 506.068
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Password must contain at least 8 characters"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="text_changed" from="UI/Menu/VBoxContainer/Username/Email" to="." method="_on_Email_text_changed"]
[connection signal="text_changed" from="UI/Menu/VBoxContainer/Username2/User_edit" to="." method="_on_User_edit_text_changed"]
[connection signal="text_changed" from="UI/Menu/VBoxContainer/Pass/Pass1" to="." method="_on_Pass1_text_changed"]
[connection signal="text_changed" from="UI/Menu/VBoxContainer/Confirm_pass/Pass2" to="." method="_on_Pass2_text_changed"]
[connection signal="pressed" from="UI/Menu/VBoxContainerUpper/Submit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="UI/Menu/HBoxContainerLower/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="UI/Menu/HBoxContainerLower/Settings" to="." method="_on_Settings_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
